<resources>
    <string name="app_name">Smart Home App</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="textviewLogin">Login:</string>
    <string name="loginButtonText">login</string>
    <string name="mainUrl">http://psih.duckdns.org/</string>
    <string name="toggleButtonText">toggle</string>
    <string name="timeText">N/A</string>
    <string name="dateText">N/A</string>
    <string name="waterHeaterButtonDescription">Switches the water heater on and off</string>
    <string name="currentTimeString">Server date/time:</string>
    <string name="rememberPasswordText">Remember password</string>
    <string name="refreshActivity">Refresh</string>
    <string name="waterHeater1">Water heater 1</string>
    <string name="waterHeater2">Water heater 2</string>
    <string name="heater1">Heater 1</string>
    <string name="ruleApplies">Rule applies from:</string>
    <string name="todayText">Today</string>
    <string name="isOnFromTo">Is on from</string>
    <string name="toText">to</string>
    <string name="discardRulesText">Remove current rule</string>
    <string name="applyText">Apply</string>
    <string name="cancelText">Cancel</string>
    <string name="nameText">Name: %1$s</string>
    <string name="statusText">Status: %1$s</string>
    <string name="tempText">Temperature: %1$s</string>
    <string name="checkBoxText">Define temperature range (send notification when not in range):</string>
    <string name="checkBox2Text">Automatically keep temperatures in range</string>
    <string name="minTempText">Min. temperature (°C):</string>
    <string name="maxTempText">Max. temperature (°C):</string>
    <string name="alert_channel_name">Alert channel</string>
    <string name="alert_channel_description">This channel sends alerts</string>
    <string name="average_temp_tv">Average temperature: %1$s°C</string>
    <string name="total_time_tv">Total time running: %1$s</string>
    <string name="curr_temp_tv">Current temperature: %1$s°C</string>
</resources>
