<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
<LinearLayout
    android:id="@+id/mainWindowLinearLayout"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTimeString"
        />

    <LinearLayout
        android:id="@+id/timeDateLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateText"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />
        <Space
            android:layout_height="match_parent"
            android:layout_width="120dp"/>
        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeText"
            android:textSize="24sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devices_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/toggleWaterHeaterButton"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/boiler_noinfo"
            android:ems="10"
            android:scaleType="fitCenter"
            android:text="@string/toggleButtonText"
            android:contentDescription="@string/waterHeaterButtonDescription"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</LinearLayout>
 </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>