<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceDialog">

    <TextView
        android:id="@+id/endTime"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_marginBottom="32dp"
        android:background="#F0F0F0"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/removeCurrentFileDialogBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="154dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:text="@string/ruleApplies"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="153dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/todayText"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/isOnFromTo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="#F0F0F0"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="20dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="36dp"
        android:text="@string/toText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/removeCurrentFileDialogBtn"
        app:layout_constraintStart_toEndOf="@+id/startTime" />

    <Button
        android:id="@+id/removeCurrentFileDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/discardRulesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTime" />

    <Button
        android:id="@+id/okDialogBtn"
        android:layout_width="110dp"
        android:layout_height="67dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toEndOf="@+id/cancelDialogBtn" />

    <Button
        android:id="@+id/cancelDialogBtn"
        android:layout_width="110dp"
        android:layout_height="67dp"
        android:layout_marginStart="48dp"
        android:text="@string/cancelText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>